# bookstore

./: .env  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  restore-db.sh  wait-for-postgres.sh
bookstore/: settings.py  urls.py
config/: settings.py  urls.py
core/: apps.py  permissions.py  urls.py
core/migrations/: 0001_initial.py
core/models/: __init__.py  order.py  product.py
core/serializers/: __init__.py  category_serializer.py  order_serializer.py  product_serializer.py  user_create_serialize.py
core/tests/: factories.py  test_order_api.py  test_product_api.py
core/views/: __init__.py  category_viewset.py  order_viewset.py  product_viewset.py  user_create_view.py
init-db/: backup.dump
order/: urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/models/: test_order.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py
product/serializers/: category_serializer.py
product/tests/models/: test_product.py
product/tests/viewsets/: test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
scripts/: restore-db.sh  wait-for-postgres.sh
